third_party/move/move-compiler-v2/tests/checking/liveness/return_typing.exp

Diagnostics:
warning: Unnecessary trailing semicolon
  ┌─ tests/checking/liveness/return_typing.move:7:19
  │
7 │         return(42);
  │         ----------^
  │         │         │
  │         │         A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  │         Any code after this expression will not be reached

error: cannot return nothing from a function with result type `u8`
  ┌─ tests/checking/liveness/return_typing.move:7:19
  │
7 │         return(42);
  │                   ^

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/liveness/return_typing.move:11:18
   │
11 │         return 42;
   │         ---------^
   │         │        │
   │         │        A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │         Any code after this expression will not be reached

error: cannot return nothing from a function with result type `u8`
   ┌─ tests/checking/liveness/return_typing.move:11:18
   │
11 │         return 42;
   │                  ^

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/liveness/return_typing.move:20:22
   │
20 │             return 42;
   │             ---------^
   │             │        │
   │             │        A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │             Any code after this expression will not be reached
